Add WeakMap and tests

--- a/.eslintrc
+++ b/.eslintrc
@@ -286,7 +286,11 @@
             "never"
         ],
         "flowtype/no-primitive-constructor-types": 2,
-        "flowtype/no-weak-types": 2,
+        "flowtype/no-weak-types": [2, {
+            "any": false,
+            "Object": false,
+            "Function": false
+        }],
         "flowtype/object-type-delimiter": [
             2,
             "comma"
