Webpack 3, Remove Gulp
Update

--- a/.eslintrc
+++ b/.eslintrc
@@ -27,8 +27,7 @@
         "document": true,
         "Promise": false,
         "performance": true,
-        "assert": true,
-        "__TEST__": true
+        "assert": true
     },
 
     "fix": true,
