--- a/.babelrc
+++ b/.babelrc
@@ -1,9 +1,28 @@
 {
-  "presets": ["es2015"],
-  "plugins": [
-    "transform-flow-strip-types",
-    "transform-es3-property-literals",
-    "transform-es3-member-expression-literals",
-    ["transform-es2015-for-of", {"loose": true}]
-  ]
+  "env": {
+    "production":{
+      "presets": [["es2015", {"modules": false}]],
+      "plugins": [
+        "transform-class-properties",
+        "transform-flow-strip-types",
+        "transform-es3-property-literals",
+        "transform-es3-member-expression-literals",
+        ["transform-es2015-for-of", {"loose": true}]
+      ]
+    },
+    "test": {
+      "presets": ["es2015"],
+      "plugins": [
+        "transform-class-properties",
+        "transform-flow-strip-types",
+        "transform-es3-property-literals",
+        "transform-es3-member-expression-literals",
+        ["transform-es2015-for-of", {"loose": true}],
+        ["flow-runtime", {
+            "assert": true,
+            "annotate": true
+        }]
+      ]
+    }
+  }
 }
