--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,5 @@ language: node_js
 node_js:
    - "6"
 before_script:
-  - npm install -g gulp
-  - npm install -g flow-typed
   - flow-typed install
-script: gulp test
+script: npm test
