--- a/package.json
+++ b/package.json
@@ -2,9 +2,25 @@
   "name": "cross-domain-safe-weakmap",
   "version": "1.0.10",
   "description": "Cross domain safe WeakMap.",
-  "main": "index.js",
+  "main": "dist/cross-domain-safe-weakmap.js",
+  "module": "dist/module",
   "scripts": {
-    "test": "gulp test"
+    "build": "npm run babel & npm run webpack && npm run flow:build",
+    "webpack": "cross-env NODE_ENV=production babel-node --presets es2015 ./node_modules/.bin/webpack --progress --output-path dist",
+    "babel": "cross-env NODE_ENV=production babel src/ --out-dir dist/module",
+    "karma": "cross-env NODE_ENV=test babel-node ./node_modules/.bin/karma start",
+    "pretest": "npm run lint & npm run flow",
+    "test": "npm run karma",
+    "lint": "eslint src/ test/",
+    "flow": "flow",
+    "flow:build": "flow gen-flow-files ./src/index.js --out-dir ./dist/module",
+    "clean": "rimraf dist coverage",
+    "reinstall": "rimraf flow-typed && rimraf node_modules && npm install && flow-typed install",
+    "release": "./publish.sh",
+    "release:patch": "./publish.sh patch",
+    "release:minor": "./publish.sh minor",
+    "release:major": "./publish.sh major",
+    "debug": "cross-env NODE_ENV=debug"
   },
   "repository": {
     "type": "git",
@@ -25,55 +41,45 @@
   ],
   "readmeFilename": "README.md",
   "devDependencies": {
+    "babel-cli": "^6.24.1",
     "babel-core": "^6.7.7",
     "babel-eslint": "^7.1.1",
-    "babel-loader": "^6.2.4",
-    "babel-plugin-__coverage__": "^11.0.0",
-    "babel-plugin-add-module-exports": "^0.1.4",
+    "babel-loader": "^7.1.1",
     "babel-plugin-flow-runtime": "^0.7.0",
     "babel-plugin-transform-class-properties": "^6.24.1",
-    "babel-plugin-transform-decorators": "^6.13.0",
-    "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-plugin-transform-es2015-for-of": "^6.23.0",
     "babel-plugin-transform-es3-member-expression-literals": "^6.5.0",
     "babel-plugin-transform-es3-property-literals": "^6.5.0",
     "babel-plugin-transform-flow-strip-types": "^6.18.0",
-    "babel-polyfill": "^6.23.0",
     "babel-preset-es2015": "^6.6.0",
-    "babel-preset-es2015-nostrict": "^6.6.2",
     "chai": "^3.5.0",
+    "cross-env": "^5.0.1",
     "eslint": "^2",
     "eslint-plugin-flowtype": "^2.30.0",
     "flow-bin": "^0.37.0",
+    "flow-copy-source": "^1.2.0",
     "flow-runtime": "^0.7.0",
-    "gulp": "^3.9.1",
-    "gulp-eslint": "^2.0.0",
-    "gulp-flowtype": "^1.0.0",
-    "gulp-karma": "0.0.5",
-    "gulp-webpack": "^1.5.0",
-    "gulp-webserver": "^0.9.1",
-    "istanbul-instrumenter-loader": "^0.2.0",
-    "karma": "^0.13.22",
+    "flow-typed": "^2.1.2",
+    "istanbul-instrumenter-loader": "^3.0.0-beta.0",
+    "karma": "^1.7.0",
+    "karma-chai": "^0.1.0",
     "karma-chrome-launcher": "^1.0.1",
-    "karma-commonjs": "^1.0.0",
-    "karma-coverage": "^1.0.0",
+    "karma-coverage-istanbul-reporter": "^1.3.0",
     "karma-firefox-launcher": "^1.0.0",
     "karma-ie-launcher": "^1.0.0",
     "karma-mocha": "^1.0.1",
     "karma-phantomjs-launcher": "^1.0.0",
     "karma-safari-launcher": "^1.0.0",
-    "karma-sinon-chai": "^1.2.0",
     "karma-sourcemap-loader": "^0.3.7",
     "karma-spec-reporter": "0.0.26",
     "karma-webpack": "^1.7.0",
     "lolex": "^1.5.0",
-    "mocha": "^2.5.3",
+    "mocha": "^3.4.2",
     "phantomjs-prebuilt": "^2.1.7",
-    "raw-loader": "^0.5.1",
-    "sinon": "^1.17.4",
-    "sinon-chai": "^2.8.0",
-    "text-loader": "0.0.1",
-    "webpack": "^1.13.1",
+    "rimraf": "^2.6.1",
+    "uglify-js": "git://github.com/mishoo/UglifyJS2.git#harmony-v2.8.22",
+    "uglifyjs-webpack-plugin": "^0.4.6",
+    "webpack": "^3.1.0",
     "yargs": "^4.7.1"
   },
   "dependencies": {}
