--- a/.babelrc
+++ b/.babelrc
@@ -4,6 +4,7 @@
     "transform-flow-strip-types",
     "transform-es3-property-literals",
     "transform-es3-member-expression-literals",
+    "transform-class-properties",
     ["transform-es2015-for-of", {"loose": true}]
   ]
 }
