--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
   ],
   "files": [
     "dist/",
-    "src/"
+    "src/",
+    "postinstall.js"
   ],
   "readmeFilename": "README.md",
   "devDependencies": {
