--- a/package.json
+++ b/package.json
@@ -4,8 +4,23 @@
   "description": "Cross domain safe WeakMap.",
   "main": "index.js",
   "scripts": {
-    "postinstall": "node postinstall.js",
-    "test": "gulp test"
+    "setup": "npm install && npm run flow-typed",
+    "lint": "eslint src/ test/ *.js",
+    "flow-typed": "flow-typed install",
+    "flow": "flow",
+    "flow:build": "flow gen-flow-files ./src/index.js --out-dir ./dist/module",
+    "karma": "cross-env NODE_ENV=test babel-node --plugins=transform-es2015-modules-commonjs ./node_modules/.bin/karma start",
+    "babel": "babel src/ --out-dir dist/module",
+    "webpack": "babel-node --plugins=transform-es2015-modules-commonjs ./node_modules/.bin/webpack --progress",
+    "test": "npm run lint && npm run flow-typed && npm run flow && npm run karma",
+    "build": "npm run test && npm run babel && npm run webpack && npm run flow:build",
+    "release": "./publish.sh",
+    "release:patch": "./publish.sh patch",
+    "release:minor": "./publish.sh minor",
+    "release:major": "./publish.sh major",
+    "clean": "rimraf dist coverage",
+    "reinstall": "rimraf flow-typed && rimraf node_modules && npm install && flow-typed install",
+    "debug": "cross-env NODE_ENV=debug"
   },
   "repository": {
     "type": "git",
@@ -27,56 +42,9 @@
   ],
   "readmeFilename": "README.md",
   "devDependencies": {
-    "babel-core": "^6.7.7",
-    "babel-eslint": "^7.1.1",
-    "babel-loader": "^6.2.4",
-    "babel-plugin-__coverage__": "^11.0.0",
-    "babel-plugin-add-module-exports": "^0.1.4",
-    "babel-plugin-flow-runtime": "^0.7.0",
-    "babel-plugin-transform-class-properties": "^6.24.1",
-    "babel-plugin-transform-decorators": "^6.13.0",
-    "babel-plugin-transform-decorators-legacy": "^1.3.4",
-    "babel-plugin-transform-es2015-for-of": "^6.23.0",
-    "babel-plugin-transform-es3-member-expression-literals": "^6.5.0",
-    "babel-plugin-transform-es3-property-literals": "^6.5.0",
-    "babel-plugin-transform-flow-strip-types": "^6.18.0",
-    "babel-polyfill": "^6.23.0",
-    "babel-preset-es2015": "^6.6.0",
-    "babel-preset-es2015-nostrict": "^6.6.2",
-    "chai": "^3.5.0",
-    "eslint": "^2",
-    "eslint-plugin-flowtype": "^2.30.0",
-    "flow-bin": "^0.56.0",
-    "flow-runtime": "^0.7.0",
-    "gulp": "^3.9.1",
-    "gulp-eslint": "^2.0.0",
-    "gulp-flowtype": "^1.0.0",
-    "gulp-karma": "0.0.5",
-    "gulp-webpack": "^1.5.0",
-    "gulp-webserver": "^0.9.1",
-    "istanbul-instrumenter-loader": "^0.2.0",
-    "karma": "^0.13.22",
-    "karma-chrome-launcher": "^1.0.1",
-    "karma-commonjs": "^1.0.0",
-    "karma-coverage": "^1.0.0",
-    "karma-firefox-launcher": "^1.0.0",
-    "karma-ie-launcher": "^1.0.0",
-    "karma-mocha": "^1.0.1",
-    "karma-phantomjs-launcher": "^1.0.0",
-    "karma-safari-launcher": "^1.0.0",
-    "karma-sinon-chai": "^1.2.0",
-    "karma-sourcemap-loader": "^0.3.7",
-    "karma-spec-reporter": "0.0.26",
-    "karma-webpack": "^1.7.0",
-    "lolex": "^1.5.0",
-    "mocha": "^2.5.3",
-    "phantomjs-prebuilt": "^2.1.7",
-    "raw-loader": "^0.5.1",
-    "sinon": "^1.17.4",
-    "sinon-chai": "^2.8.0",
-    "text-loader": "0.0.1",
-    "webpack": "^1.13.1",
-    "yargs": "^4.7.1"
+    "flow-bin": "^0.70.0",
+    "grumbler-scripts": "^2.0.18",
+    "mocha": "^2.5.3"
   },
   "dependencies": {
     "cross-domain-utils": "^2.0.0"
