--- a/package.json
+++ b/package.json
@@ -39,11 +39,13 @@
   ],
   "readmeFilename": "README.md",
   "devDependencies": {
+    "@types/jest": "^26.0.24",
     "@typescript-eslint/eslint-plugin": "^4.29.1",
     "@typescript-eslint/parser": "^4.29.1",
     "flow-bin": "0.155.0",
     "grumbler-scripts": "^3",
     "mocha": "^4",
+    "ts-node": "^10.2.0",
     "typescript": "^4.3.5"
   },
   "dependencies": {
