--- a/package.json
+++ b/package.json
@@ -3,14 +3,18 @@
   "version": "1.0.29",
   "description": "Cross domain safe WeakMap.",
   "main": "index.js",
+  "types": "dist/index.d.ts",
   "scripts": {
-    "tsc": "tsc",
     "lint": "eslint --ext ts,tsx,js,jsx src/ test/",
     "karma": "cross-env NODE_ENV=test babel-node --plugins=transform-es2015-modules-commonjs ./node_modules/.bin/karma start",
     "babel": "babel src/ --out-dir dist/module",
     "webpack": "babel-node --plugins=transform-es2015-modules-commonjs ./node_modules/.bin/webpack --progress",
     "test": "npm run lint && npm run tsc && npm run karma",
-    "build": "npm run test && npm run babel && npm run webpack",
+    "tsc": "tsc",
+    "build": "npm run test && npm run babel && npm run webpack && npm run build:types",
+    "build:flow": "find . -type f -not -path './node_modules/*' -name '*.d.ts' -exec sh -c 'flowgen --add-flow-header $1 -o ${1%.*.*}.js.flow' _ '{}' \\;",
+    "build:tsc": "tsc -p tsconfig.build.json",
+    "build:types": "npm run build:tsc && npm run build:flow",
     "release": "./publish.sh",
     "release:patch": "./publish.sh patch",
     "release:minor": "./publish.sh minor",
@@ -42,7 +46,7 @@
     "@types/jest": "^26.0.24",
     "@typescript-eslint/eslint-plugin": "^4.29.1",
     "@typescript-eslint/parser": "^4.29.1",
-    "flow-bin": "0.155.0",
+    "flowgen": "^1.14.1",
     "grumbler-scripts": "^3",
     "mocha": "^4",
     "ts-node": "^10.2.0",
