--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "types": "dist/index.d.ts",
   "scripts": {
-    "lint": "eslint --ext ts,tsx,js,jsx src/ test/",
+    "lint": "eslint --ext ts,tsx,js,jsx src/ test/ --fix",
     "karma": "cross-env NODE_ENV=test babel-node --plugins=transform-es2015-modules-commonjs ./node_modules/.bin/karma start",
     "babel": "babel src/ --out-dir dist/module",
     "webpack": "babel-node --plugins=transform-es2015-modules-commonjs ./node_modules/.bin/webpack --progress",
@@ -13,7 +13,7 @@
     "tsc": "tsc",
     "build": "npm run test && npm run babel && npm run webpack && npm run build:types",
     "build:flow": "find . -type f -not -path './node_modules/*' -name '*.d.ts' -exec sh -c 'flowgen --add-flow-header $1 -o ${1%.*.*}.js.flow' _ '{}' \\;",
-    "build:tsc": "tsc -p tsconfig.build.json",
+    "build:tsc": "tsc src/* --outDir dist --declaration --emitDeclarationOnly",
     "build:types": "npm run build:tsc && npm run build:flow",
     "release": "./publish.sh",
     "release:patch": "./publish.sh patch",
