--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "types": "dist/index.d.ts",
   "scripts": {
-    "lint": "eslint --ext ts,tsx,js,jsx src/ test/ --fix",
+    "lint": "eslint --ext ts,tsx,js,jsx src/ test/",
     "karma": "cross-env NODE_ENV=test babel-node --plugins=transform-es2015-modules-commonjs ./node_modules/.bin/karma start",
     "babel": "babel src/ --out-dir dist/module",
     "webpack": "babel-node --plugins=transform-es2015-modules-commonjs ./node_modules/.bin/webpack --progress",
@@ -44,13 +44,14 @@
   "readmeFilename": "README.md",
   "devDependencies": {
     "@types/jest": "^26.0.24",
-    "@typescript-eslint/eslint-plugin": "^4.29.1",
-    "@typescript-eslint/parser": "^4.29.1",
+    "@types/webpack": "^5.28.0",
+    "@typescript-eslint/eslint-plugin": "^5.5.0",
+    "@typescript-eslint/parser": "^5.5.0",
     "flowgen": "^1.14.1",
-    "grumbler-scripts": "^3",
+    "grumbler-scripts": "^5.1.1-beta.2",
     "mocha": "^4",
     "ts-node": "^10.2.0",
-    "typescript": "^4.3.5"
+    "typescript": "4.3.5"
   },
   "dependencies": {
     "cross-domain-utils": "^2.0.0"
