--- a/package.json
+++ b/package.json
@@ -3,23 +3,24 @@
   "version": "1.0.29",
   "description": "Cross domain safe WeakMap.",
   "main": "index.js",
-  "types": "dist/index.d.ts",
+  "module": "lib/index.js",
+  "types": "lib/index.d.ts",
   "scripts": {
     "lint": "eslint --ext ts,tsx,js,jsx src/ test/",
     "karma": "cross-env NODE_ENV=test babel-node --plugins=transform-es2015-modules-commonjs ./node_modules/.bin/karma start",
-    "babel": "babel src/ --out-dir dist/module",
+    "babel": "babel src/ --out-dir lib",
     "webpack": "babel-node --plugins=transform-es2015-modules-commonjs ./node_modules/.bin/webpack --progress",
     "test": "npm run lint && npm run tsc && npm run karma",
     "tsc": "tsc",
     "build": "npm run test && npm run babel && npm run webpack && npm run build:types",
     "build:flow": "find . -type f -not -path './node_modules/*' -name '*.d.ts' -exec sh -c 'flowgen --add-flow-header $1 -o ${1%.*.*}.js.flow' _ '{}' \\;",
-    "build:tsc": "tsc src/* --outDir dist --declaration --emitDeclarationOnly",
+    "build:tsc": "tsc src/* --outDir lib --declaration --emitDeclarationOnly",
     "build:types": "npm run build:tsc && npm run build:flow",
     "release": "./publish.sh",
     "release:patch": "./publish.sh patch",
     "release:minor": "./publish.sh minor",
     "release:major": "./publish.sh major",
-    "clean": "rimraf dist coverage",
+    "clean": "rimraf dist coverage lib",
     "reinstall": "rimraf node_modules && npm install",
     "debug": "cross-env NODE_ENV=debug"
   },
@@ -38,6 +39,7 @@
   ],
   "files": [
     "dist/",
+    "lib/",
     "src/",
     "postinstall.js"
   ],
