--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "types": "lib/index.d.ts",
   "scripts": {
     "lint": "eslint --ext ts,tsx,js,jsx src/ test/",
-    "karma": "cross-env NODE_ENV=test babel-node --plugins=transform-es2015-modules-commonjs ./node_modules/.bin/karma start",
+    "karma": "cross-env NODE_ENV=test babel-node --trace-deprecation --presets '@babel/preset-env' ./node_modules/.bin/karma start",
     "babel": "babel src/ --out-dir lib",
     "webpack": "babel-node --plugins=transform-es2015-modules-commonjs ./node_modules/.bin/webpack --progress",
     "test": "npm run lint && npm run tsc && npm run karma",
@@ -45,6 +45,7 @@
   ],
   "readmeFilename": "README.md",
   "devDependencies": {
+    "@types/grumbler-scripts": "^3.0.1",
     "@types/jest": "^26.0.24",
     "@types/webpack": "^5.28.0",
     "@typescript-eslint/eslint-plugin": "^5.5.0",
@@ -52,7 +53,7 @@
     "flowgen": "^1.14.1",
     "grumbler-scripts": "^5.1.1-beta.2",
     "mocha": "^4",
-    "ts-node": "^10.2.0",
+    "ts-node": "^10.4.0",
     "typescript": "4.3.5"
   },
   "dependencies": {
