use new kraken org prefix for cross-domain-utils

--- a/.flowconfig
+++ b/.flowconfig
@@ -1,8 +1,8 @@
 [ignore]
 .*/node_modules/babel-plugin-flow-runtime
 .*/node_modules/flow-runtime
-.*/node_modules/cross-domain-utils/dist
-.*/node_modules/cross-domain-utils/test
+.*/node_modules/@krakenjs/cross-domain-utils/dist
+.*/node_modules/@krakenjs/cross-domain-utils/test
 .*/node_modules/npm
 .*/node_modules/resolve
 .*/dist/module
