--- a/package.json
+++ b/package.json
@@ -28,12 +28,7 @@
   "keywords": [
     "template"
   ],
-  "licenses": [
-    {
-      "type": "Apache 2.0",
-      "url": "http://www.apache.org/licenses/LICENSE-2.0.html"
-    }
-  ],
+  "license": "Apache-2.0",
   "files": [
     "dist/",
     "src/",
