--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "webpack": "babel-node --plugins=transform-es2015-modules-commonjs ./node_modules/.bin/webpack --progress",
     "test": "npm run lint && npm run flow-typed && npm run flow && npm run karma",
     "build": "npm run test && npm run babel && npm run webpack",
-    "prerelease": "npm run clean && npm run test && npm run build",
+    "prerelease": "npm run clean && npm run build",
     "release": "standard-version",
     "postrelease": "git push && git push --follow-tags && npm publish",
     "clean": "rimraf dist coverage",
