chore: check in dist folder changes

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "webpack": "babel-node --plugins=transform-es2015-modules-commonjs ./node_modules/.bin/webpack --progress",
     "test": "npm run lint && npm run flow-typed && npm run flow && npm run karma",
     "build": "npm run test && npm run babel && npm run webpack",
-    "prerelease": "npm run clean && npm run build",
+    "prerelease": "npm run clean && npm run build && git add dist && commit -m 'dist: check in dist folder'",
     "release": "standard-version",
     "postrelease": "git push && git push --follow-tags && npm publish",
     "clean": "rimraf dist coverage",
@@ -58,6 +58,10 @@
       {
         "type": "test",
         "hidden": false
+      },
+      {
+        "type": "dist",
+        "hidden": true
       }
     ]
   },
