Revert "use new kraken org prefix for cross-domain-utils (#4)"
This reverts commit 9ac5072ace74b380543e9a4d9b8fce16660fd977.

--- a/package.json
+++ b/package.json
@@ -85,6 +85,6 @@
     "standard-version": "^9.3.2"
   },
   "dependencies": {
-    "@krakenjs/cross-domain-utils": "^3.0.2"
+    "cross-domain-utils": "^2.0.0"
   }
 }
