chore: add action for publishing alpha releases

--- a/package.json
+++ b/package.json
@@ -13,9 +13,13 @@
     "webpack": "babel-node --plugins=transform-es2015-modules-commonjs ./node_modules/.bin/webpack --progress",
     "test": "npm run lint && npm run flow-typed && npm run flow && npm run karma",
     "build": "npm run test && npm run babel && npm run webpack",
-    "prerelease": "npm run clean && npm run build && git add dist && git commit -m 'ci: check in dist folder' || echo 'Nothing to distribute'",
+    "build-commit": "git add dist && git commit -m 'ci: check in dist folder' || echo 'Nothing to distribute'",
+    "prerelease": "npm run clean && npm run build && npm run build-commit",
     "release": "standard-version",
     "postrelease": "git push && git push --follow-tags && npm publish",
+    "prerelease-alpha": "npm run clean && npm run build && npm run build-commit",
+    "release-alpha": "npm version prerelease --preid alpha --no-git-tag-version",
+    "postrelease-alpha": "git push && git push --follow-tags && npm publish --tag alpha",
     "clean": "rimraf dist coverage",
     "reinstall": "rimraf flow-typed && rimraf node_modules && npm install && flow-typed install",
     "debug": "cross-env NODE_ENV=debug",
