--- a/package.json
+++ b/package.json
@@ -3,25 +3,29 @@
   "version": "2.0.3",
   "description": "Cross domain safe WeakMap.",
   "main": "dist/cross-domain-safe-weakmap.js",
+  "module": "dist/index.js",
+  "types": "dist/types/index.d.ts",
+  "sideEffects": false,
   "scripts": {
-    "setup": "npm install && npm run flow-typed",
-    "lint": "eslint src/ test/ *.js",
-    "flow-typed": "rm -rf ./flow-typed && flow-typed install",
-    "flow": "flow",
-    "karma": "cross-env NODE_ENV=test babel-node --plugins=transform-es2015-modules-commonjs ./node_modules/.bin/karma start",
-    "babel": "babel src/ --out-dir dist/module",
-    "webpack": "babel-node --plugins=transform-es2015-modules-commonjs ./node_modules/.bin/webpack --progress",
+    "build": "npm run test && npm run babel && npm run webpack && npm run build:types",
+    "build:flow": "find ./dist -type f -not -path './node_modules/*' -name '*.d.ts' -exec sh -c 'flowgen --add-flow-header $1 -o ${1%.*.*}.js.flow' _ '{}' \\;",
+    "build:tsc": "tsc src/* --outDir ./dist/esm --declaration --emitDeclarationOnly --strict",
+    "build:types": "npm run build:tsc && npm run build:flow",
+    "webpack": "cross-env NODE_ENV=production babel-node --plugins=transform-es2015-modules-commonjs ./node_modules/.bin/webpack --progress",
+    "babel": "cross-env NODE_ENV=production babel src/ --out-dir ./dist/esm/ --extensions .ts,.tsx",
+    "tsc": "tsc",
     "format": "prettier --write --ignore-unknown .",
     "format:check": "prettier --check .",
-    "test": "npm run format:check && npm run lint && npm run flow-typed && npm run flow && npm run karma",
-    "build": "npm run test && npm run babel && npm run webpack",
+    "test": "npm run format:check && npm run lint && npm run tsc --no-emit && npm run vitest",
+    "lint": "eslint --ext ts,tsx,js,jsx src/ test/",
+    "clean": "rimraf dist coverage",
     "prerelease": "npm run clean && npm run build && git add dist && git commit -m 'ci: check in dist folder' || echo 'Nothing to distribute'",
     "release": "standard-version",
     "postrelease": "git push && git push --follow-tags && npm publish",
-    "clean": "rimraf dist coverage",
-    "reinstall": "rimraf flow-typed && rimraf node_modules && npm install && flow-typed install",
     "debug": "cross-env NODE_ENV=debug",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "vitest": "vitest run --dom --coverage",
+    "vitest:watch": "vitest watch --dom --coverage --ui"
   },
   "repository": {
     "type": "git",
@@ -72,26 +76,32 @@
   ],
   "license": "Apache-2.0",
   "files": [
-    "dist/",
-    "src/",
-    "postinstall.js"
+    "dist/"
   ],
   "readmeFilename": "README.md",
   "devDependencies": {
-    "@commitlint/cli": "^16.2.1",
-    "@commitlint/config-conventional": "^16.2.1",
-    "@krakenjs/grumbler-scripts": "^8.0.5",
+    "@commitlint/cli": "^17.3.0",
+    "@commitlint/config-conventional": "^17.3.0",
+    "@krakenjs/babel-config-grumbler": "^8.1.0",
+    "@krakenjs/eslint-config-grumbler": "^8.1.0",
+    "@krakenjs/typescript-config-grumbler": "^8.1.0",
+    "@krakenjs/webpack-config-grumbler": "8.1.0",
+    "@vitest/coverage-c8": "^0.25.3",
+    "@vitest/ui": "^0.25.3",
     "cross-env": "^7.0.3",
-    "flow-bin": "0.155.0",
-    "flow-typed": "^3.8.0",
-    "husky": "^7.0.0",
-    "lint-staged": "^12.4.0",
-    "mocha": "^4",
-    "prettier": "^2.6.2",
-    "standard-version": "^9.3.2"
+    "flowgen": "^1.20.1",
+    "happy-dom": "^7.7.0",
+    "husky": "^8.0.2",
+    "lint-staged": "^13.0.3",
+    "prettier": "^2.7.1",
+    "standard-version": "^9.5.0",
+    "ts-node": "^10.9.1",
+    "typescript": "4.9.3",
+    "vite": "^3.2.4",
+    "vitest": "^0.25.3"
   },
   "dependencies": {
-    "@krakenjs/cross-domain-utils": "^3.0.2"
+    "@krakenjs/cross-domain-utils": "^4.0.0-typescript.1"
   },
   "lint-staged": {
     "*": "prettier --write --ignore-unknown"
