--- a/package.json
+++ b/package.json
@@ -80,8 +80,10 @@
   "devDependencies": {
     "@commitlint/cli": "^16.2.1",
     "@commitlint/config-conventional": "^16.2.1",
-    "@krakenjs/grumbler-scripts": "^7.0.0",
+    "@krakenjs/grumbler-scripts": "^8.0.5",
+    "cross-env": "^7.0.3",
     "flow-bin": "0.155.0",
+    "flow-typed": "^3.8.0",
     "husky": "^7.0.0",
     "lint-staged": "^12.4.0",
     "mocha": "^4",
